--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,6 +51,9 @@ builtWith.keys = Object.keys(builtWith).sort(
 );
 builtWith.keys = builtWith.keys.slice(0, NUM_LANGUAGES);
 
+import {Tabs, TabItem} from "@astrojs/starlight/components";
+
+
 // https://threejs.org/docs/#manual/en/introduction/Installation
 ---
 
@@ -208,6 +211,7 @@ builtWith.keys = builtWith.keys.slice(0, NUM_LANGUAGES);
           />
         </ul>
       </section>
+
       <section class="col-span-5">
         <h2 class="section">📚 Education</h2>
 
