--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -173,8 +173,7 @@ import {Tabs, TabItem} from "@astrojs/starlight/components";
           />
 
           <p class="tracking-wide">
-            Computer science student interested in Data Science and Software
-            Development. In my free time, I enjoy building projects and writing
+            Computer science student at the University of Virginia deeply passionate about software engineering.  In my free time, I enjoy building projects and writing
             informational blogs
           </p>
         </div>
@@ -185,6 +184,12 @@ import {Tabs, TabItem} from "@astrojs/starlight/components";
         <h2 class="section">💪 Experience</h2>
 
         <ul class="space-y-4">
+          <ResumeItem
+            title="Cavalier Autonomous Racing"
+            description="Software Engineer"
+            href="https://autonomousracing.dev/"
+            src="/logos/cavalier_autonomous_racing.jpg"
+          />
           <ResumeItem
             title="SitScape"
             description="Software Engineering Intern"
