Updated skills section

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -48,9 +48,9 @@
       }
 
       .resumeSection > li {
-        text-indent: -2.5rem;
-        padding-left: 2.5rem;
-      } 
+        text-indent: -2.25rem;
+        padding-left: 2.25rem;
+      }
 
       .greyed-out {
         opacity: 0.5;
@@ -151,9 +151,9 @@
           </div>
           <ul class="list-inside px-4 pr-20">
             <li class="hangingIndent">
-              <strong>Relevant Coursework</strong> Compilers,
-              Opperating Systems, Linear Algebra, Cryptography,
-              Cybersecurity, Artificial Intelligence, Data Structures and Algorithms
+              <strong>Relevant Coursework</strong> Compilers, Opperating Systems,
+              Linear Algebra, Cryptography, Cybersecurity, Artificial Intelligence,
+              Data Structures and Algorithms
             </li>
             <li class="hangingIndent">
               <strong>Clubs</strong> Phi Eta Sigma Honor Society, Cavalier Autonomous
@@ -198,10 +198,12 @@
               networking optimizations and zero-copy data-transfer.
             </li> -->
             <li>
-              Built a CPU usage logger to identify performance bottlenecks and reducing P95 detection latency by 75%.
+              Built a CPU usage logger to identify performance bottlenecks and
+              reducing P95 detection latency by 75%.
             </li>
             <li>
-              Led a remote development initiative to containerize the stack in Docker, reducing new member onboarding time to under 30 minutes.
+              Led a remote development initiative to containerize the stack in
+              Docker, reducing new member onboarding time to under 30 minutes.
             </li>
             <li>
               Created an end-to-end test suite for perception on the
@@ -282,7 +284,8 @@
             <div>
               <h3 class="-mb-1">
                 <a href="https://github.com/wkaisertexas/screentimelapse"
-                  ><strong>TimeLapze</strong>, Personal Project</a>
+                  ><strong>TimeLapze</strong>, Personal Project</a
+                >
               </h3>
               <p class="italic">Screen and Camera Recorder</p>
             </div>
@@ -512,40 +515,38 @@
           <h2 class="text-xl font-medium -mb-1">Skills</h2>
           <hr class="mb-1 border-black border-t-[1px]" />
         </div>
-
-        <ul class="px-4 pt-2">
-          <li>
-            <strong>Languages (Proficient)</strong>
-            <item>C++</item>, <item>Python,</item>
-            <item class="type-testing">Matlab,</item>
-            <item class="type-data-engineering">Go, </item><item>Java</item>, <item
-              >Swift</item
-            >, <item>HTML</item>, <item>CSS</item>, <item>JavaScript</item>, <item
-              >SQL</item
-            >, <item class="type-data-engineering">Rust</item>
+      
+        <ul>
+          <li class="flex items-start gap-4">
+            <div class="text-left pr-2 font-bold w-32">Languages</div>
+            <div class="flex-1 hangingIndent">
+              <item>C++, </item><item>Python, </item><item>Matlab, </item
+              ><item class="type-data-engineering">Go, </item><item>Java, </item
+              ><item>Swift, </item><item>HTML, </item><item>CSS, </item
+              ><item>JavaScript, </item><item>SQL, </item><item class="type-data-engineering"
+                >Rust</item
+              >
+            </div>
           </li>
-          <!-- <li>
-              <strong>Languages</strong>
-              <item>C++</item>, <item>Python</item>, <item>Java</item>, <item>Swift</item>, <item>HTML (familiar)</item>, <item>CSS</item>, <item>JavaScript</item>, <item>SQL</item>
-            </li> -->
-          <li>
-            <strong>Tools</strong>
-            <item>Docker</item>, <item>Linux</item>, <item>Git</item>, <item
-              >Django</item
-            >, <item>ROS 2</item>, <item class="type-data-engineering"
-              >Apache Spark,</item
-            ><item class="type-data-engineering">Cassandra,</item><item
-              class="type-data-engineering">Kafka,</item
-            >
-            <item>React</item>, <item>TensorFlow</item>, <item>OpenCV</item>, <item
-              >Matplotlib</item
-            >, <item>Pandas</item>, <item>NumPy</item>, <item>Jira</item>, <item
-              >Visual Studio</item
-            >
+      
+          <li class="flex items-start gap-4">
+            <div class="text-left pr-2 font-bold w-32">Tools</div>
+            <div class="flex-1 hangingIndent">
+              <item>Docker, </item><item>Linux, </item><item>Git, </item
+              ><item>Django, </item><item>ROS 2, </item><item class="type-data-engineering"
+                >Apache Spark, </item><item class="type-data-engineering">Cassandra, </item
+              ><item class="type-data-engineering">Kafka, </item><item>React, </item
+              ><item>TensorFlow, </item><item>OpenCV, </item><item>Matplotlib, </item
+              ><item>Pandas, </item><item>NumPy, </item><item>Jira, </item
+              ><item>Visual Studio</item>
+            </div>
           </li>
-          <li>
-            <strong>Certifications</strong> TensorFlow Developer Certified, AWS Certified
-            Cloud Practitioner
+      
+          <li class="flex items-start gap-4">
+            <div class="text-left pr-2 font-bold w-32">Certifications</div>
+            <div class="flex-1 hangingIndent">
+              TensorFlow Developer Certified, AWS Certified Cloud Practitioner
+            </div>
           </li>
         </ul>
       </section>
