--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -111,7 +111,7 @@
     <address hidden>23 Villa Canyon Place, The Woodlands, TX 77382</address>
     <header class="grid grid-cols-3">
       <div class="col-span-1 col-start-2 flex flex-col text-center">
-        <h1 class="text-xl font-bold">William David Kaiser</h1>
+        <h1 class="text-xl font-bold">William Kaiser</h1>
         <a href="mailto:williamdkaiser@outlook.com"
           >williamdkaiser@outlook.com</a
         >
@@ -146,12 +146,12 @@
             </div>
             <div class="text-right">
               <div>GPA 3.9</div>
-              <div class="italic">May 2026</div>
+              <div class="italic">August 2024 &mdash; May 2026</div>
             </div>
           </div>
           <ul class="list-inside px-4 pr-20">
             <li class="hangingIndent">
-              <strong>Relevant Coursework</strong> Compilers, Opperating Systems,
+              <strong>Relevant Coursework</strong> Compilers, Operating Systems,
               Linear Algebra, Cryptography, Cybersecurity, Artificial Intelligence,
               Data Structures and Algorithms
             </li>
@@ -185,13 +185,13 @@
           <ul class="list-disc resumeSection list-inside px-4 mr-2 inset-4">
             <li>
               Engineered real-time C++ algorithms for detecting opponent race
-              cars at speeds up to 184.1 mph.
+              cars at speeds up to 184.1 mph
             </li>
 
             <!-- <li>
               Developed a monocular depth estimation pipeline using Torch, ATen
               and TensorRT.
-              Integrated cameras into the perception stack with a PyTorch machine-learning model.
+              Integrated cameras into the perception stack with a PyTorch machine-learning model
             </li> -->
             <!-- <li>
               Decreased detection time over 50% by implementing
@@ -199,15 +199,15 @@
             </li> -->
             <li>
               Built a CPU usage logger to identify performance bottlenecks and
-              reducing P95 detection latency by 75%.
+              reducing P95 detection latency by 75%
             </li>
             <li>
               Led a remote development initiative to containerize the stack in
-              Docker, reducing new member onboarding time to under 30 minutes.
+              Docker, reducing new member onboarding time to under 30 minutes
             </li>
             <li>
               Created an end-to-end test suite for perception on the
-              university's SLURM cluster, integrated into GitLab CI/CD.
+              university's SLURM cluster, integrated into GitLab CI/CD
             </li>
           </ul>
         </div>
@@ -228,17 +228,17 @@
           <ul class="list-disc resumeSection list-inside px-4 mr-2">
             <li class="type-testing">
               Built a user-interface and logic generator using Python and
-              JavaScript for a no-code platform, enhancing product design.
+              JavaScript for a no-code platform, enhancing product design
             </li>
 
             <li>
               Reduced development time by generating a first-pass user interface
-              and logic for application developers.
+              and logic for application developers
             </li>
 
             <li>
               Worked with JavaScript, HTML, CSS and Python in an Agile
-              development environment.
+              development environment
             </li>
 
             <!-- <li>
@@ -264,17 +264,16 @@
 
           <ul class="list-disc resumeSection list-inside px-4 mr-2">
             <li>
+              Wrote compute-efficient kernels in CUDA and OpenCL for neural networks
+            </li>
+            <li>
               Profiling memory access in distributed training with CUDA, NVIDIA
-              NSight Systems, and GPGPU-Sim.
+              NSight Systems, and GPGPU-Sim
             </li>
             <li>
               Collaborated with a research team to perform trace-driven
               simulations using MGPUSim and Accel-Sim, evaluating the
-              performance impact of proposed hardware modifications.
-            </li>
-            <li>
-              Paid National Science Foundation researcher with Professor of
-              Computer Science Adwait Jog.
+              performance impact of proposed hardware modifications
             </li>
           </ul>
         </div>
@@ -296,20 +295,20 @@
 
           <ul class="list-disc resumeSection list-inside px-4 mr-2">
             <li>
-              Built and published an open source screen and camera recorder to
-              make time-lapse videos on MacOS.
+              Built and published an open-source screen and camera recorder to
+              make time-lapse videos on MacOS
             </li>
             <li>
               Ranked #1 on Hacker News and has over 10,000 users and 750 Stars
-              on GitHub.
+              on GitHub
             </li>
             <li>
-              Leveraged Apple's Metal hardware acceleration, reducing CPU usage
-              by 87% and enabling simultaneous 4K recording.
+              Leveraged Swift and Apple's Metal API for hardware acceleration, reducing CPU usage
+              by 87% and enabling simultaneous 4K recording
             </li>
             <!-- <li>
               Reduced build size from 500 MB to 2 MB after rewriting a Python
-              proof of concept in native Swift.
+              proof of concept in native Swift
             </li> -->
           </ul>
         </div>
@@ -330,18 +329,18 @@
           <ul class="list-disc resumeSection list-inside px-4 mr-2">
             <li>
               Built a platform to share material science data utilizing a
-              Next.js frontend and an OpenSearch cluster.
+              Next.js frontend and an OpenSearch cluster
             </li>
             <li>
               Collected experimental and simulation data for 5 main energetic
-              material categories.
+              material categories
             </li>
             <li>
               Created a data ingestion pipeline for larger than 1 terabyte data imports
-              using AWS S3 and API Gateway.
+              using AWS S3 and API Gateway
             </li>
             <li>
-              Mocked and refined a search and import user interface in Figma.
+              Mocked and refined a search and import user interface in Figma
             </li
           </ul>
         </div> -->
@@ -362,13 +361,12 @@
           <ul class="list-inside resumeSection list-disc px-4 mr-2">
             <li>
               Achieved 90% validation accuracy for an optical gauge reading
-              pipeline using OpenCV on embedded Linux for Boston Dynamics&apos;
-              Spot robot.
+              pipeline designed for industrial sites using OpenCV
             </li>
             <li>
               Developed a machine learning model predicting loan approval
               likelihood using data from a mortgage broker with $1.4 billion in
-              annual loan volume.
+              annual loan volume
             </li>
           </ul>
         </div>
@@ -395,11 +393,11 @@
           </div>
           <!-- <ul class="list-disc resumeSection list-inside px-4">
             <li>
-              Organized a pitch competition with 10 teams and $1,000 in prizes.
+              Organized a pitch competition with 10 teams and $1,000 in prizes
             </li>
             <li>
               Coordinated speaker events with local entrepreneurs with over 50
-              attendees.
+              attendees
             </li>
           </ul> -->
         </div>
@@ -419,21 +417,21 @@
 
           <!-- <ul class="list-disc resumeSection list-inside px-4 mr-2">
               <li>
-                Taught a 10-week Introduction to Machine Learning course to 20 students in TensorFlow.
+                Taught a 10-week Introduction to Machine Learning course to 20 students in TensorFlow
               </li>
               <li>
-                Taught an Introduction to Machine Learning with TensorFlow Course to 20 students.
+                Taught an Introduction to Machine Learning with TensorFlow Course to 20 students
               </li>
               <li class="parents">
-              Developed a 10-week curriculum to prepare students for the TensorFlow Developer Certification Test.
+              Developed a 10-week curriculum to prepare students for the TensorFlow Developer Certification Test
               </li>
               <li>
                 Developed a 10-week curriculum from scratch which
-                included readings, lectures and take-home projects.
+                included readings, lectures and take-home projects
               </li>
               <li>
                 Culminated in a student-directed final project showcasing an
-                interactive machine learning model.
+                interactive machine learning model
               </li>
             </ul> -->
         </div>
@@ -462,16 +460,16 @@
         <ul class="list-disc resumeSection list-inside px-4 mr-2">
           <li>
               Scraped >13,000 top science fair projects using Python and
-              BeautifulSoup.
+              BeautifulSoup
             </li>
           <li>
               Analyzed data on 20 project categories utilizing Pandas and
-              Matplotlib.
+              Matplotlib
             </li>
           <li>
             Scraped over 13,000 top science fair projects using Python and
             BeautifulSoup, and created an interactive in-browser dashboard with
-            Bokeh, JavaScript, and WebGL.
+            Bokeh, JavaScript, and WebGL
           </li>
           <li>
             Published findings in a 5,000-word LinkedIn post with over 5,000
@@ -494,17 +492,17 @@
           <ul class="list-disc resumeSection list-inside px-4">
             <li>
               Analyzed >400,000 coronavirus research papers in the Open Research
-              Dataset using Python and R.
+              Dataset using Python and R
             </li>
             <li>
               Leveraged alternative metrics to quantify research paper impacts
-              on the scientific community and media.
+              on the scientific community and media
             </li>
             <li>
               Applied K-means clustering to categorize research using embeddings
-              from a biomedical sciences model.
+              from a biomedical sciences model
             </li>
-            <li>Wrote, presented, and defended research conducted.</li>
+            <li>Wrote, presented, and defended research conducted</li>
           </ul>
         </div>
     </section>
@@ -536,8 +534,7 @@
               ><item>Django, </item><item>ROS 2, </item><item class="type-data-engineering"
                 >Apache Spark, </item><item class="type-data-engineering">Cassandra, </item
               ><item class="type-data-engineering">Kafka, </item><item>React, </item
-              ><item>TensorFlow, </item><item>OpenCV, </item><item>Matplotlib, </item
-              ><item>Pandas, </item><item>NumPy, </item><item>Jira, </item
+              ><item>TensorFlow, </item><item>OpenCV, </item><item>Pandas, </item><item>Jira, </item
               ><item>Visual Studio</item>
             </div>
           </li>
