adding ros-2-tracing-cpp.md

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -210,7 +210,7 @@ import {Tabs, TabItem} from "@astrojs/starlight/components";
           />
           <ResumeItem
             title="Valedor Partners"
-            description="Data Science Intern"
+            description="Software Engineering Intern"
             href="https://valedorpartners.com/"
             src="/logos/valedor.jpeg"
           />
