updating broken links

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -41,7 +41,7 @@
         }
       }
 
-      /* big thank you to http://www.csstothepoint.com/hangingindent.html for the guide */
+      /* big thank you to https://www.csstothepoint.com/hangingindent.html for the guide */
       .hangingIndent {
         text-indent: -1.5rem;
         padding-left: 1.5rem;
