adding anduril to my homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -185,6 +185,12 @@ import {Tabs, TabItem} from "@astrojs/starlight/components";
 
         <ul class="space-y-4">
           <ResumeItem
+            title="Anduril Industries"
+            description="Software Engineering Intern - Mission Autonomy"
+            href="http://anduril.com/"
+            src="/logos/anduril.png"
+          />
+          <ResumeItem
             title="Cavalier Autonomous Racing"
             description="Software Engineer"
             href="https://autonomousracing.dev/"
