adding in anduril

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -153,7 +153,7 @@
             </div>
             <div class="text-right">
               <div>GPA 3.9</div>
-              <div class="italic">August 2024 &mdash; May 2026</div>
+              <div class="italic">August 2022 &mdash; May 2026</div>
             </div>
           </div>
           <ul class="list-inside px-4 pr-20">
@@ -175,6 +175,32 @@
           <hr class="mb-1 border-black border-t-[1px]" />
         </div>
 
+        <div id="anduril"
+          <div class="flex flex-row justify-between items-end">
+            <div>
+              <h3 class="-mb-1">
+                <strong>Anduril,</strong> Costa Mesa
+              </h3>
+              <p class="italic">Software Engineering Intern</p>
+            </div>
+            <div>
+              <p class="italic">June 2025 &mdash; Present</p>
+            </div>
+          </div>
+
+          <ul class="list-disc resumeSection list-inside px-4 mr-2 inset-4">
+            <li>
+              Worked on mission autonomy for the Fury unmanned Autonomous Aerial Vehicle (AAV).
+            </li>
+            <li>
+              Built a vehicle capability test suite with automated regression tracking in Python to ensure accuracy between models used in motion planning, faster than realtime and software in the loop testing.
+            </li>
+            <li>
+              Extended to work on verification and validation for embedded flight software in the ramp to first flight.
+            </li>
+          </ul>
+        </div>
+
         <div id="cav-auto-racing">
           <div class="flex flex-row justify-between items-end">
             <div>
@@ -194,7 +220,7 @@
               cars at speeds up to 184.1 mph
             </li> -->
             <li>
-              Engineered real-time C++ algorithms to detect opponent race cars at speeds up to 184.1 mph, integrating new radar sensors and refining perception during six weeks of on-track testing at the Kentucky Speedway and the Indianapolis Motor Speedway
+              Engineered real-time C++ algorithms to detect opponent race cars at speeds up to 184.1 mph, integrating new radar sensors and refining perception during six weeks of on-track testing at the Kentucky Speedway and the Indianapolis Motor Speedway.
             </li>
 
             <!-- <li>
@@ -208,15 +234,15 @@
             </li> -->
             <li>
               Built a CPU usage logger to identify system bottlenecks and
-              reduce P95 detection latency by 75%
+              reduce P95 detection latency by 75%.
             </li>
             <li>
               Led a remote development initiative to containerize the stack in
-              Docker, allowing members to use thin development environments and get running in less than 15 minutes
+              Docker, allowing members to use thin development environments and get running in less than 15 minutes.
             </li>
             <li>
               Created an end-to-end test suite of perception benchmarks and automated execution with GitLab CI / CD and the 
-              university's SLURM cluster for parallel execution
+              university's SLURM cluster for parallel execution.
             </li>
             <!-- <li>
               Spent six weeks on-track testing at Indianapolis Motor Speedway and Kentucky Speedway, integrating new radar sensors and refining perception algorithms
@@ -239,11 +265,11 @@
 
           <ul class="list-disc resumeSection list-inside px-4 mr-2">
             <li>
-              Leveraged a large language model to design and implement a user-interface and logic builder using Python and JavaScript for a Full-Stack no-code platform
+              Leveraged a large language model to design and implement a user-interface and logic builder using Python and JavaScript for a Full-Stack no-code platform.
             </li>
 
             <li>
-              Designed a domain-specific language for representing user interfaces and logic, optimized for interpretability by large language models
+              Designed a domain-specific language for representing user interfaces and logic, optimized for interpretability by large language models.
             </li> 
 
             <!-- <li>
@@ -274,11 +300,11 @@
 
           <ul class="list-disc resumeSection list-inside px-4 mr-2">
             <li>
-              Developed compute-optimized CUDA C++ kernels to serve as a reference implementation to benchmark novel hardware designs
+              Developed compute-optimized CUDA C++ kernels to serve as a reference implementation to benchmark novel hardware designs.
             </li>
             <li>
               Profiled memory access in distributed training with
-              NSight Systems and GPGPU-Sim
+              NSight Systems and GPGPU-Sim.
             </li>
             <!-- <li>
               Performed trace-driven simulations with MGPUSim and Accel-Sim to evaluate the performance impact of proposed hardware modifications
@@ -307,12 +333,12 @@
               make time-lapse videos on macOS
             </li> -->
             <li>
-              Launch reached #1 on Hacker News and currently has over 8,000 users and 750 Stars
-              on GitHub
+              Launch reached #1 on Hacker News and currently has over 8,000 users and 800 Stars
+              on GitHub.
             </li>
             <li>
               Leveraged Swift and Apple's Metal API for hardware acceleration,
-              reducing CPU usage by 87% and enabling simultaneous 4K recording
+              reducing CPU usage by 87% and enabling simultaneous 4K recording.
             </li>
             <!-- <li>
               Reduced build size from 500 MB to 2 MB after rewriting a Python
@@ -372,13 +398,13 @@
               pipeline designed for industrial sites using OpenCV
             </li> -->
             <li>
-              Developed a machine learning model to predict loan approval likelihood using data from a mortgage broker with $1.4 billion in annual loan volume
+              Developed a machine learning model to predict loan approval likelihood using data from a mortgage broker with $1.4 billion in annual loan volume.
             </li>
           </ul>
         </div>
       </section>
 
-      <section id="leadership" class="space-y-1">
+      <!-- <section id="leadership" class="space-y-1">
         <div>
           <h2 class="text-xl font-medium -mb-1">Leadership</h2>
           <hr class="mb-1 border-black border-t-[1px]" />
@@ -397,7 +423,7 @@
               <p class="italic">November 2023 &mdash; Present</p>
             </div>
           </div>
-          <!-- <ul class="list-disc resumeSection list-inside px-4">
+          <ul class="list-disc resumeSection list-inside px-4">
             <li>
               Organized a pitch competition with 10 teams and $1,000 in prizes
             </li>
@@ -405,7 +431,7 @@
               Coordinated speaker events with local entrepreneurs with over 50
               attendees
             </li>
-          </ul> -->
+          </ul>
         </div>
 
         <div id="course-director">
@@ -421,7 +447,7 @@
             </div>
           </div>
 
-          <!-- <ul class="list-disc resumeSection list-inside px-4 mr-2">
+          <ul class="list-disc resumeSection list-inside px-4 mr-2">
               <li>
                 Taught a 10-week Introduction to Machine Learning course to 20 students in TensorFlow
               </li>
@@ -439,9 +465,9 @@
                 Culminated in a student-directed final project showcasing an
                 interactive machine learning model
               </li>
-            </ul> -->
+            </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- <section id="projects">
         <h2 class="text-xl font-medium -mb-1">Projects</h2>
